# c_minilib_config

./: .clang-tidy  .gitignore  README.md  TO-DO.txt  meson.build  meson.options  tasks.py
docs/: architecture.drawio
example/: example.env  main.c  meson.build
example/subprojects/: c_minilib_config.wrap
include/: c_minilib_config.h
src/: c_minilib_config.c  cmc_parse_interface.h  main.c  meson.build
src/cmc_env_parser/: meson.build
src/cmc_parse_interface/: cmc_parse_interface.h  meson.build
src/cmc_parse_interface/cmc_env_parser/: cmc_env_parser.c  cmc_env_parser.h  meson.build  old.c
src/error/: error.c  error.h  meson.build
src/utils/: cmc_array.h  cmc_common.h  cmc_error.h  cmc_field.c  cmc_field.h  cmc_file.h  cmc_settings.c  cmc_settings.h  cmc_string.h  cmc_tree.c  cmc_tree.h  meson.build
subprojects/: c_minilib_error.wrap
test/: meson.build
test/test_c_minilib_config.d/: meson.build  superApp.env  test_c_minilib_config.c
test/test_cmc_env_parser.d/: array.env  array_nested.env  array_nested.json  config.env  dict.env  kea.env  kea.json  meson.build  test_cmc_env_parser.c  test_cmc_env_parser_array.c  test_cmc_env_parser_array_nested.c  test_cmc_env_parser_default.c  test_cmc_env_parser_dict.c  test_cmc_env_parser_kea.c
test/test_cmc_field.d/: meson.build  test_cmc_field.c
test/test_cmc_settings.d/: meson.build  test_cmc_settings.c
test/test_cmc_tree.d/: meson.build  test_cmc_tree.c
